Add RestaurantSearchApp Submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tracks"]
 	path = tracks
 	url = https://github.com/roycechua23/react-native-tracker-app
+[submodule "RestaurantSearchApp"]
+	path = RestaurantSearchApp
+	url = https://github.com/roycechua23/RestauranntSearchApp
